# AI-Memory

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
api/: app.py
llm_interface/: client.py  embeddings.py
memory_engine/: prompt_builder.py  retrieval.py  schema.py  scoring.py  service.py
scripts/: chat_cli.py
storage/: vector_store.py
tests/: test_chat_integration.py  test_chroma_integration.py  test_prompt_builder.py  test_reliability.py  test_schema.py  test_scoring.py
